# EGSM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
execution/: execution.cu  execution.h
graph/: graph.cpp  graph.h  graph_gpu.cu  graph_gpu.h  operations.cpp  operations.h
processing/: common.h  join_bfs.cu  join_bfs.h  join_bfs_dfs.cu  join_bfs_dfs.h  plan.cu  plan.h
structures/: hashed_trie_manager.cu  hashed_trie_manager.h  hashed_trie_manager_kernel.cu  hashed_trie_manager_kernel.h  hashed_tries.cu  hashed_tries.h
utils/: config.h  cuda_helpers.h  globals.cu  globals.h  helpers.h  mem_pool.cu  mem_pool.h  search.cuh  types.h
utils/nucleus/: k3-4.cpp  nd.h  nd_interface.cpp  nd_interface.h  util.cpp
